<resources>
    <string name="app_name">SmidigProsjektGruppe2</string>
    <string name="facebook_app_id">226777378198443</string>
    <string name="fb_login_protocol_scheme">fb226777378198443</string>
    <string name="title_home">Hjem</string>
    <string name="title_groups">Grupper</string>
    <string name="title_chat">Chæt</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu">Menu</string>
    <string name="find_friend_tab">Finn Venner</string>
    <string name="find_group_tab">Finn Grupper</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
